--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --lang-div-background-color: rgba(17, 17, 17, 0.1);
   --land-text-color: rgba(17, 17, 17, 0.8);
   --dot: rgba(225, 173, 100, 1);
+  --about-me-hey: rgba(38, 37, 37, 0.7);
 }
 
 html,
