--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,6 @@ html,
 body {
   max-width: 100vw;
   overflow: hidden;
-  height: 100vh
 }
 
 body {
@@ -23,9 +22,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+
+.main{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100vh !important;
 }
 
 * {
@@ -48,7 +52,7 @@ next-route-announcer {
   clip: rect(1px, 1px, 1px, 1px);
 }
 
-.parent {
+.mainContainer {
   display: flex;
   justify-content: center;
   margin-top: -3rem;
