--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -68,34 +68,36 @@
 .aboutImageThree {
   height: auto;
   position: fixed;
-  bottom: 7vh;
+  /* bottom: 7vh; */
+  bottom: calc(7vh - (900px - 100vh) * 0.2);
 }
 
 .aboutImageOne {
-  width: calc(26.45vw + 27vh);
+  width: calc(20.25vw + 39vh);
   /* width: 39.2vw; */
 
   z-index: 1;
-  left: calc(-3.8vw + (900px - 100vh) * 0.2 - (1920px - 100vw) * 0.1);
+  left: calc(-3.8vw + (900px - 100vh) * 0.48 - (1920px - 100vw) * 0.1);
   transform: rotate(8.4deg);
 }
 
 .aboutImageTwo {
-  width: calc(30.25vw + 27vh);
+  width: calc(24vw + 39vh);
   /* width: 43vw; */
 
   z-index: 3;
-  bottom: 5.8vh;
-  left: calc(28.5vw+ (900px - 100vh) * 0.1);
+  /* bottom: 5.8vh; */
+  bottom: calc(5.8vh - (900px - 100vh) * 0.2);
+  left: calc(28.5vw+ (900px - 100vh) * 0.18);
   transform: rotate(-6.9deg);
   /* transform: rotate(calc(-6.9deg + (900px - 100vh) * 0.05deg)); */
 }
 
 .aboutImageThree {
-  width: calc(25.25vw + 27vh);
+  width: calc(19vw + 39vh);
   /* width: 38vw; */
   z-index: 2;
-  right: calc(-3vw + (900px - 100vh) * 0.2 - (1920px - 100vw) * 0.1);
+  right: calc(-3vw + (900px - 100vh) * 0.48 - (1920px - 100vw) * 0.1);
   transform: rotate(+6.3deg);
 }
 
