--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,17 @@
 :root {
   --background: #f1f1f0;
-  --foreground: rgb(38,37,37);
-  --box-backgroud: #392F1E17;
+  --foreground: rgb(38, 37, 37);
+  --box-backgroud: #392f1e17;
   --link-color: #333;
-  --link-underline-color: #D7A765;
+  --link-underline-color: #d7a765;
   --lang-div-background-color: rgba(17, 17, 17, 0.1);
   --land-text-color: rgba(17, 17, 17, 0.8);
   --dot: rgba(225, 173, 100, 1);
   --about-me-hey: rgba(38, 37, 37, 0.7);
+}
+
+* {
+  padding: 0;
 }
 
 html,
@@ -22,10 +26,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 
-.main{
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -57,6 +60,8 @@ next-route-announcer {
   justify-content: center;
   margin-top: -3rem;
   overflow: auto;
+  flex-grow: 1;
+  padding-top: 4.2vh;
 }
 
 .footer {
@@ -70,4 +75,3 @@ next-route-announcer {
   font-weight: 500;
   color: rgba(17, 17, 17, 1);
 }
-
