--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,25 +19,35 @@
   justify-content: center;
   width: 100%;
   padding-bottom: 0;
+
+  height: 100%;
 }
 
 .headingContainer {
   display: flex;
   justify-content: center;
   flex: 1;
-  gap: 10rem;
+  gap: 2vw;
+
+  flex-direction: row;
+
+  padding-top: 5vh;
 }
 
 .name {
   display: flex;
   flex-direction: column;
-  font-size: calc(2em + 1vw);
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  font-size: calc(2em + 0.72vw + 1vh);
   font-weight: 600;
+  margin-top: -1%;
 }
 
 .description {
   max-width: 30rem;
-  font-size: calc(1em + 1vw);
+  font-size: calc(0.625em + 1vh + 0.5vw);
   font-weight: 500;
   line-height: normal;
   width: 100%;
@@ -47,10 +57,6 @@
   color: var(--dot);
   font-family: "auto";
   padding: 0;
-}
-
-.imageContainer {
-  height: 35vh;
 }
 
 .nameFirstPara {
