--- a/src/app/matterjs/skillseffect.module.css
+++ b/src/app/matterjs/skillseffect.module.css
@@ -30,3 +30,19 @@
 .langContainer:active {
   cursor: grabbing; /* Change cursor when dragging */
 }
+
+.centerDiv {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  color: var(--land-text-color);
+  padding: 20px 40px;
+  border-radius: 20px;
+  font-size: 4rem;
+  font-weight: 600;
+  text-align: center;
+  z-index: 10;
+  letter-spacing: 2px;
+}
+
