--- a/src/app/components/Card.module.css
+++ b/src/app/components/Card.module.css
@@ -36,7 +36,7 @@
   display: inline-block;
   padding: 0.5rem 1rem;
   background-color: var(--lang-div-background-color);
-  color: var(--land-text-color);
+  color: #FFFFFF;
   border-radius: 9999px;
   margin: 3px;
   font-weight: 500;
@@ -53,6 +53,13 @@
   color: var(--education-name-subheading);
   font-size: 18px;
   font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+.backContent {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
 @media (max-width: 768px) {
