--- a/src/app/education/education.module.css
+++ b/src/app/education/education.module.css
@@ -1,6 +1,9 @@
 .conatiner {
     display: flex;
     gap: 2rem;
+    flex-wrap: wrap;
+    margin-top: 3rem;
+    justify-content: center;
 }
 
 @media (max-width: 568px) {
