--- a/src/app/matterjs/skillseffect.module.css
+++ b/src/app/matterjs/skillseffect.module.css
@@ -15,10 +15,10 @@
 .centerDiv {
   position: absolute;
   top: 25%;
-  left: 40%;
+  left: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
   color: var(--land-text-color);
-  border-radius: 20px;
   font-size: 4rem;
   font-weight: 600;
   text-align: center;
