overflow not hidden in mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,5 +88,6 @@ next-route-announcer {
 @media (max-width: 768px) {
   .mainContainer {
       flex-direction: column;
+      overflow: auto;
   }
 }
